ArgoCD-demo-apps/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  name: demo-app1
  namespace: demo-apps
spec:
  selector:
    app: demo-app1
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
