ArgoCD-demo-apps/apps/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    labels:
      app.kubernetes.io/part-of: demo-apps
  name: demo-app1
  namespace: demo-apps
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-gateway
    sectionName: https

  hostnames:
  - demo-app1.local

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demo-app1
      port: 80
